[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/CreateSession.gd" type="Script" id=1]
[ext_resource path="res://Font/Roboto-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/Roboto-BlackItalic.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Font/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[node name="CreateSession" type="Node2D"]
script = ExtResource( 1 )

[node name="ScreenMarg" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
custom_constants/margin_right = 25
custom_constants/margin_top = 155
custom_constants/margin_left = 25
custom_constants/margin_bottom = 125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ScreenMarg"]
visible = false
margin_left = 25.0
margin_top = 155.0
margin_right = 455.0
margin_bottom = 595.0

[node name="TabContainer" type="TabContainer" parent="ScreenMarg"]
margin_left = 25.0
margin_top = 155.0
margin_right = 455.0
margin_bottom = 595.0

[node name="Automatic" type="Tabs" parent="ScreenMarg/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AutoMarg" type="MarginContainer" parent="ScreenMarg/TabContainer/Automatic"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
margin_bottom = 3.05176e-05
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 50
custom_constants/margin_left = 40
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoVBox" type="VBoxContainer" parent="ScreenMarg/TabContainer/Automatic/AutoMarg"]
margin_left = 40.0
margin_top = 50.0
margin_right = 382.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SetVBox" type="HSplitContainer" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_right = 342.0
margin_bottom = 39.0
size_flags_horizontal = 3
split_offset = -50

[node name="SetText" type="RichTextLabel" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/SetVBox"]
margin_right = 115.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Set"
text = "Set"
fit_content_height = true

[node name="SetOptions" type="OptionButton" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/SetVBox"]
margin_left = 127.0
margin_right = 342.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )

[node name="HSeparator" type="HSeparator" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 43.0
margin_right = 342.0
margin_bottom = 47.0
size_flags_stretch_ratio = 0.1

[node name="FullHSplit2" type="HSplitContainer" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 51.0
margin_right = 342.0
margin_bottom = 91.0
size_flags_horizontal = 3
dragger_visibility = 1

[node name="FullText" type="RichTextLabel" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/FullHSplit2"]
margin_right = 254.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "Full Set?"
text = "Full Set?"
fit_content_height = true
scroll_active = false

[node name="FullCkbtn" type="CheckButton" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/FullHSplit2"]
margin_left = 266.0
margin_right = 342.0
margin_bottom = 40.0

[node name="HSeparator2" type="HSeparator" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 95.0
margin_right = 342.0
margin_bottom = 99.0

[node name="NumItemsHBox" type="HSplitContainer" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 103.0
margin_right = 342.0
margin_bottom = 137.0
size_flags_horizontal = 3
dragger_visibility = 1

[node name="NumItemsText" type="RichTextLabel" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/NumItemsHBox"]
margin_right = 272.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "Number of Items"
text = "Number of Items"
fit_content_height = true
scroll_active = false

[node name="NumItemsLned" type="LineEdit" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/NumItemsHBox"]
margin_left = 284.0
margin_right = 342.0
margin_bottom = 34.0
max_length = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 141.0
margin_right = 342.0
margin_bottom = 145.0

[node name="LPracHSplit" type="HBoxContainer" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 149.0
margin_right = 342.0
margin_bottom = 189.0
size_flags_horizontal = 3

[node name="LPracTxt" type="RichTextLabel" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/LPracHSplit"]
margin_right = 200.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "Least Practiced?"
text = "Least Practiced?"
fit_content_height = true
scroll_active = false

[node name="LPracCkbtn" type="CheckButton" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/LPracHSplit"]
margin_left = 204.0
margin_right = 280.0
margin_bottom = 40.0

[node name="LPracLned" type="LineEdit" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/LPracHSplit"]
margin_left = 284.0
margin_right = 342.0
margin_bottom = 40.0
max_length = 3

[node name="HSeparator4" type="HSeparator" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 193.0
margin_right = 342.0
margin_bottom = 197.0

[node name="RandHSplit" type="HBoxContainer" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 201.0
margin_right = 342.0
margin_bottom = 241.0
size_flags_horizontal = 3

[node name="RandText" type="RichTextLabel" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/RandHSplit"]
margin_right = 200.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "Random?"
text = "Random?"
fit_content_height = true
scroll_active = false

[node name="RandCkbtn" type="CheckButton" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/RandHSplit"]
margin_left = 204.0
margin_right = 280.0
margin_bottom = 40.0

[node name="RandLned" type="LineEdit" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/RandHSplit"]
margin_left = 284.0
margin_right = 342.0
margin_bottom = 40.0

[node name="HSeparator5" type="HSeparator" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 245.0
margin_right = 342.0
margin_bottom = 249.0

[node name="DescHBox" type="HSplitContainer" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox"]
margin_top = 253.0
margin_right = 342.0
margin_bottom = 293.0
split_offset = 500
dragger_visibility = 1

[node name="GroupDescriptionText" type="RichTextLabel" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/DescHBox"]
margin_right = 294.0
margin_bottom = 40.0
bbcode_enabled = true
bbcode_text = "You'd like to practice...
The full set!"
text = "You'd like to practice...
The full set!"
fit_content_height = true
scroll_active = false

[node name="StartAutoSessionButton" type="Button" parent="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/DescHBox"]
margin_left = 306.0
margin_right = 342.0
margin_bottom = 40.0
text = "Go!"

[node name="Manual" type="Tabs" parent="ScreenMarg/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HidePanel" type="Panel" parent="ScreenMarg/TabContainer/Manual"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComingSoonText" type="RichTextLabel" parent="ScreenMarg/TabContainer/Manual/HidePanel"]
margin_right = 400.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "






[tornado][center]Coming Soon...[/center][/tornado]"
text = "






Coming Soon..."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManMarg" type="MarginContainer" parent="ScreenMarg/TabContainer/Manual"]
margin_right = 422.0
margin_bottom = 369.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManVBox" type="VBoxContainer" parent="ScreenMarg/TabContainer/Manual/ManMarg"]
margin_left = 20.0
margin_top = 10.0
margin_right = 402.0
margin_bottom = 386.0

[node name="SetHBox" type="HBoxContainer" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_right = 382.0
margin_bottom = 30.0

[node name="SetText" type="RichTextLabel" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/SetHBox"]
margin_right = 189.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 8 )
text = "Set"
fit_content_height = true

[node name="OptionButton" type="OptionButton" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/SetHBox"]
margin_left = 193.0
margin_right = 382.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="SetItemsHBox" type="HBoxContainer" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 34.0
margin_right = 382.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SetItemList" type="ItemList" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/SetItemsHBox"]
margin_right = 382.0
margin_bottom = 111.0
rect_min_size = Vector2( 382, 111 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 149.0
margin_right = 382.0
margin_bottom = 153.0
size_flags_vertical = 3

[node name="TransButtonsHBox" type="HBoxContainer" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 157.0
margin_right = 382.0
margin_bottom = 182.0
alignment = 1

[node name="AddItemButton" type="Button" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/TransButtonsHBox"]
margin_left = 99.0
margin_right = 174.0
margin_bottom = 25.0
text = "Add Item"

[node name="SubItemButton" type="Button" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/TransButtonsHBox"]
margin_left = 178.0
margin_right = 282.0
margin_bottom = 25.0
text = "Remove Item"

[node name="SessionLabel" type="RichTextLabel" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 186.0
margin_right = 382.0
margin_bottom = 216.0
custom_fonts/normal_font = SubResource( 8 )
text = "Session"
fit_content_height = true

[node name="HSeparator2" type="HSeparator" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 220.0
margin_right = 382.0
margin_bottom = 224.0
size_flags_vertical = 3

[node name="SessItemsHBox" type="HBoxContainer" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 228.0
margin_right = 382.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SessItemList" type="ItemList" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/SessItemsHBox"]
margin_right = 382.0
margin_bottom = 111.0
rect_min_size = Vector2( 382, 111 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 343.0
margin_right = 382.0
margin_bottom = 347.0
size_flags_vertical = 3

[node name="StartButtonsHBox" type="HBoxContainer" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox"]
margin_top = 351.0
margin_right = 382.0
margin_bottom = 376.0
alignment = 1

[node name="StartButton" type="Button" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/StartButtonsHBox"]
margin_left = 79.0
margin_right = 189.0
margin_bottom = 25.0
text = "Start Session!"

[node name="BackButton" type="Button" parent="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/StartButtonsHBox"]
margin_left = 193.0
margin_right = 302.0
margin_bottom = 25.0
text = "Back to Menu"
[connection signal="item_selected" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/SetVBox/SetOptions" to="." method="_on_SetOptions_item_selected"]
[connection signal="toggled" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/FullHSplit2/FullCkbtn" to="." method="_on_FullCkbtn_toggled"]
[connection signal="focus_exited" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/NumItemsHBox/NumItemsLned" to="." method="_on_NumItemsLned_focus_exited"]
[connection signal="text_changed" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/NumItemsHBox/NumItemsLned" to="." method="_on_NumItemsLned_text_changed"]
[connection signal="text_entered" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/NumItemsHBox/NumItemsLned" to="." method="_on_NumItemsLned_text_entered"]
[connection signal="toggled" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/LPracHSplit/LPracCkbtn" to="." method="_on_LPracCkbtn_toggled"]
[connection signal="focus_exited" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/LPracHSplit/LPracLned" to="." method="_on_LPracLned_focus_exited"]
[connection signal="text_changed" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/LPracHSplit/LPracLned" to="." method="_on_LPracLned_text_changed"]
[connection signal="text_entered" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/LPracHSplit/LPracLned" to="." method="_on_LPracLned_text_entered"]
[connection signal="toggled" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/RandHSplit/RandCkbtn" to="." method="_on_RandCkbtn_toggled"]
[connection signal="focus_exited" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/RandHSplit/RandLned" to="." method="_on_RandLned_focus_exited"]
[connection signal="text_changed" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/RandHSplit/RandLned" to="." method="_on_RandLned_text_changed"]
[connection signal="text_entered" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/RandHSplit/RandLned" to="." method="_on_RandLned_text_entered"]
[connection signal="pressed" from="ScreenMarg/TabContainer/Automatic/AutoMarg/AutoVBox/DescHBox/StartAutoSessionButton" to="." method="_on_StartAutoSessionButton_pressed"]
[connection signal="item_selected" from="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/SetHBox/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/TransButtonsHBox/AddItemButton" to="." method="_on_AddItemButton_pressed"]
[connection signal="pressed" from="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/TransButtonsHBox/SubItemButton" to="." method="_on_SubItemButton_pressed"]
[connection signal="pressed" from="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/StartButtonsHBox/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ScreenMarg/TabContainer/Manual/ManMarg/ManVBox/StartButtonsHBox/BackButton" to="." method="_on_BackButton_pressed"]
